--- a/game_page.html
+++ b/game_page.html
@@ -18,7 +18,7 @@
 	<center>
 		<h2 style="color: white;">Guess The Word!</h2>
 		<h3 id="playerQuestion"></h3>
-		<h3 id="player answer"></h3>
+		<h3 id="playerAnswer"></h3>
 
 		<br>
 		<br>
